# libMiniELF

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
example/: dump_elf.cpp
include/minielf/: MiniELF.hpp
src/: MiniELF.cpp
tests/: test_elf_file  test_minielf.cpp
